parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> TkOBlock declarations instructions TkCBlock
Rule 3     declarations -> TkDeclare seq_declarations
Rule 4     declarations -> lambda
Rule 5     seq_declarations -> seq_declarations TkSemicolon declaration
Rule 6     seq_declarations -> declaration
Rule 7     declaration -> idLists TkTwoPoints type
Rule 8     idLists -> id TkComma idLists
Rule 9     idLists -> id
Rule 10    instructions -> instructions TkSemicolon instruction
Rule 11    instructions -> instruction
Rule 12    instruction -> TkSkip
Rule 13    instruction -> assignment
Rule 14    instruction -> print_instruction
Rule 15    instruction -> conditional
Rule 16    instruction -> for
Rule 17    instruction -> do
Rule 18    instruction -> block
Rule 19    assignment -> id TkAsig expression
Rule 20    expression -> expression TkPlus expression
Rule 21    expression -> expression TkMinus expression
Rule 22    expression -> expression TkMult expression
Rule 23    expression -> expression TkOr expression
Rule 24    expression -> expression TkAnd expression
Rule 25    expression -> expression TkLess expression
Rule 26    expression -> expression TkLeq expression
Rule 27    expression -> expression TkGeq expression
Rule 28    expression -> expression TkGreater expression
Rule 29    expression -> expression TkEqual expression
Rule 30    expression -> expression TkNEqual expression
Rule 31    expression -> expression TkComma expression
Rule 32    expression -> TkMinus expression
Rule 33    expression -> TkNot expression
Rule 34    expression -> TkOpenPar expression TkClosePar
Rule 35    expression -> array_access
Rule 36    expression -> array_modify
Rule 37    expression -> number
Rule 38    expression -> boolean
Rule 39    expression -> id
Rule 40    expression -> string
Rule 41    array_access -> expression TkOBracket expression TkCBracket
Rule 42    array_modify -> expression TkOpenPar expression TkTwoPoints expression TkClosePar
Rule 43    print_instruction -> TkPrint concatenation
Rule 44    concatenation -> concatenation TkConcat expression
Rule 45    concatenation -> expression
Rule 46    conditional -> TkIf guards TkFi
Rule 47    guards -> guards TkGuard guard
Rule 48    guards -> guard
Rule 49    guard -> expression TkArrow instructions
Rule 50    for -> TkFor id TkIn expression TkTo expression TkArrow instructions TkRof
Rule 51    do -> TkDo guards TkOd
Rule 52    type -> TkInt
Rule 53    type -> TkBool
Rule 54    type -> TkArray TkOBracket number TkSoForth number TkCBracket
Rule 55    id -> TkId
Rule 56    number -> TkNum
Rule 57    boolean -> TkTrue
Rule 58    boolean -> TkFalse
Rule 59    string -> TkString
Rule 60    lambda -> <empty>

Terminals, with rules where they appear

TkAnd                : 24
TkArray              : 54
TkArrow              : 49 50
TkAsig               : 19
TkBool               : 53
TkCBlock             : 2
TkCBracket           : 41 54
TkClosePar           : 34 42
TkComma              : 8 31
TkConcat             : 44
TkDeclare            : 3
TkDo                 : 51
TkEqual              : 29
TkFalse              : 58
TkFi                 : 46
TkFor                : 50
TkGeq                : 27
TkGreater            : 28
TkGuard              : 47
TkId                 : 55
TkIf                 : 46
TkIn                 : 50
TkInt                : 52
TkLeq                : 26
TkLess               : 25
TkMinus              : 21 32
TkMult               : 22
TkNEqual             : 30
TkNot                : 33
TkNum                : 56
TkOBlock             : 2
TkOBracket           : 41 54
TkOd                 : 51
TkOpenPar            : 34 42
TkOr                 : 23
TkPlus               : 20
TkPrint              : 43
TkRof                : 50
TkSemicolon          : 5 10
TkSkip               : 12
TkSoForth            : 54
TkString             : 59
TkTo                 : 50
TkTrue               : 57
TkTwoPoints          : 7 42
error                : 

Nonterminals, with rules where they appear

array_access         : 35
array_modify         : 36
assignment           : 13
block                : 1 18
boolean              : 38
concatenation        : 43 44
conditional          : 15
declaration          : 5 6
declarations         : 2
do                   : 17
expression           : 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 33 34 41 41 42 42 42 44 45 49 50 50
for                  : 16
guard                : 47 48
guards               : 46 47 51
id                   : 8 9 19 39 50
idLists              : 7 8
instruction          : 10 11
instructions         : 2 10 49 50
lambda               : 4
number               : 37 54 54
print_instruction    : 14
program              : 0
seq_declarations     : 3 5
string               : 40
type                 : 7


state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . TkOBlock declarations instructions TkCBlock

    TkOBlock        shift and go to state 3

    program                        shift and go to state 1
    block                          shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> TkOBlock . declarations instructions TkCBlock
    (3) declarations -> . TkDeclare seq_declarations
    (4) declarations -> . lambda
    (60) lambda -> .

    TkDeclare       shift and go to state 5
    TkSkip          reduce using rule 60 (lambda -> .)
    TkPrint         reduce using rule 60 (lambda -> .)
    TkIf            reduce using rule 60 (lambda -> .)
    TkFor           reduce using rule 60 (lambda -> .)
    TkDo            reduce using rule 60 (lambda -> .)
    TkOBlock        reduce using rule 60 (lambda -> .)
    TkId            reduce using rule 60 (lambda -> .)

    declarations                   shift and go to state 4
    lambda                         shift and go to state 6

state 4

    (2) block -> TkOBlock declarations . instructions TkCBlock
    (10) instructions -> . instructions TkSemicolon instruction
    (11) instructions -> . instruction
    (12) instruction -> . TkSkip
    (13) instruction -> . assignment
    (14) instruction -> . print_instruction
    (15) instruction -> . conditional
    (16) instruction -> . for
    (17) instruction -> . do
    (18) instruction -> . block
    (19) assignment -> . id TkAsig expression
    (43) print_instruction -> . TkPrint concatenation
    (46) conditional -> . TkIf guards TkFi
    (50) for -> . TkFor id TkIn expression TkTo expression TkArrow instructions TkRof
    (51) do -> . TkDo guards TkOd
    (2) block -> . TkOBlock declarations instructions TkCBlock
    (55) id -> . TkId

    TkSkip          shift and go to state 9
    TkPrint         shift and go to state 17
    TkIf            shift and go to state 18
    TkFor           shift and go to state 19
    TkDo            shift and go to state 20
    TkOBlock        shift and go to state 3
    TkId            shift and go to state 21

    instructions                   shift and go to state 7
    instruction                    shift and go to state 8
    assignment                     shift and go to state 10
    print_instruction              shift and go to state 11
    conditional                    shift and go to state 12
    for                            shift and go to state 13
    do                             shift and go to state 14
    block                          shift and go to state 15
    id                             shift and go to state 16

state 5

    (3) declarations -> TkDeclare . seq_declarations
    (5) seq_declarations -> . seq_declarations TkSemicolon declaration
    (6) seq_declarations -> . declaration
    (7) declaration -> . idLists TkTwoPoints type
    (8) idLists -> . id TkComma idLists
    (9) idLists -> . id
    (55) id -> . TkId

    TkId            shift and go to state 21

    seq_declarations               shift and go to state 22
    declaration                    shift and go to state 23
    idLists                        shift and go to state 24
    id                             shift and go to state 25

state 6

    (4) declarations -> lambda .

    TkSkip          reduce using rule 4 (declarations -> lambda .)
    TkPrint         reduce using rule 4 (declarations -> lambda .)
    TkIf            reduce using rule 4 (declarations -> lambda .)
    TkFor           reduce using rule 4 (declarations -> lambda .)
    TkDo            reduce using rule 4 (declarations -> lambda .)
    TkOBlock        reduce using rule 4 (declarations -> lambda .)
    TkId            reduce using rule 4 (declarations -> lambda .)


state 7

    (2) block -> TkOBlock declarations instructions . TkCBlock
    (10) instructions -> instructions . TkSemicolon instruction

    TkCBlock        shift and go to state 26
    TkSemicolon     shift and go to state 27


state 8

    (11) instructions -> instruction .

    TkCBlock        reduce using rule 11 (instructions -> instruction .)
    TkSemicolon     reduce using rule 11 (instructions -> instruction .)
    TkFi            reduce using rule 11 (instructions -> instruction .)
    TkGuard         reduce using rule 11 (instructions -> instruction .)
    TkOd            reduce using rule 11 (instructions -> instruction .)
    TkRof           reduce using rule 11 (instructions -> instruction .)


state 9

    (12) instruction -> TkSkip .

    TkCBlock        reduce using rule 12 (instruction -> TkSkip .)
    TkSemicolon     reduce using rule 12 (instruction -> TkSkip .)
    TkFi            reduce using rule 12 (instruction -> TkSkip .)
    TkGuard         reduce using rule 12 (instruction -> TkSkip .)
    TkOd            reduce using rule 12 (instruction -> TkSkip .)
    TkRof           reduce using rule 12 (instruction -> TkSkip .)


state 10

    (13) instruction -> assignment .

    TkCBlock        reduce using rule 13 (instruction -> assignment .)
    TkSemicolon     reduce using rule 13 (instruction -> assignment .)
    TkFi            reduce using rule 13 (instruction -> assignment .)
    TkGuard         reduce using rule 13 (instruction -> assignment .)
    TkOd            reduce using rule 13 (instruction -> assignment .)
    TkRof           reduce using rule 13 (instruction -> assignment .)


state 11

    (14) instruction -> print_instruction .

    TkCBlock        reduce using rule 14 (instruction -> print_instruction .)
    TkSemicolon     reduce using rule 14 (instruction -> print_instruction .)
    TkFi            reduce using rule 14 (instruction -> print_instruction .)
    TkGuard         reduce using rule 14 (instruction -> print_instruction .)
    TkOd            reduce using rule 14 (instruction -> print_instruction .)
    TkRof           reduce using rule 14 (instruction -> print_instruction .)


state 12

    (15) instruction -> conditional .

    TkCBlock        reduce using rule 15 (instruction -> conditional .)
    TkSemicolon     reduce using rule 15 (instruction -> conditional .)
    TkFi            reduce using rule 15 (instruction -> conditional .)
    TkGuard         reduce using rule 15 (instruction -> conditional .)
    TkOd            reduce using rule 15 (instruction -> conditional .)
    TkRof           reduce using rule 15 (instruction -> conditional .)


state 13

    (16) instruction -> for .

    TkCBlock        reduce using rule 16 (instruction -> for .)
    TkSemicolon     reduce using rule 16 (instruction -> for .)
    TkFi            reduce using rule 16 (instruction -> for .)
    TkGuard         reduce using rule 16 (instruction -> for .)
    TkOd            reduce using rule 16 (instruction -> for .)
    TkRof           reduce using rule 16 (instruction -> for .)


state 14

    (17) instruction -> do .

    TkCBlock        reduce using rule 17 (instruction -> do .)
    TkSemicolon     reduce using rule 17 (instruction -> do .)
    TkFi            reduce using rule 17 (instruction -> do .)
    TkGuard         reduce using rule 17 (instruction -> do .)
    TkOd            reduce using rule 17 (instruction -> do .)
    TkRof           reduce using rule 17 (instruction -> do .)


state 15

    (18) instruction -> block .

    TkCBlock        reduce using rule 18 (instruction -> block .)
    TkSemicolon     reduce using rule 18 (instruction -> block .)
    TkFi            reduce using rule 18 (instruction -> block .)
    TkGuard         reduce using rule 18 (instruction -> block .)
    TkOd            reduce using rule 18 (instruction -> block .)
    TkRof           reduce using rule 18 (instruction -> block .)


state 16

    (19) assignment -> id . TkAsig expression

    TkAsig          shift and go to state 28


state 17

    (43) print_instruction -> TkPrint . concatenation
    (44) concatenation -> . concatenation TkConcat expression
    (45) concatenation -> . expression
    (20) expression -> . expression TkPlus expression
    (21) expression -> . expression TkMinus expression
    (22) expression -> . expression TkMult expression
    (23) expression -> . expression TkOr expression
    (24) expression -> . expression TkAnd expression
    (25) expression -> . expression TkLess expression
    (26) expression -> . expression TkLeq expression
    (27) expression -> . expression TkGeq expression
    (28) expression -> . expression TkGreater expression
    (29) expression -> . expression TkEqual expression
    (30) expression -> . expression TkNEqual expression
    (31) expression -> . expression TkComma expression
    (32) expression -> . TkMinus expression
    (33) expression -> . TkNot expression
    (34) expression -> . TkOpenPar expression TkClosePar
    (35) expression -> . array_access
    (36) expression -> . array_modify
    (37) expression -> . number
    (38) expression -> . boolean
    (39) expression -> . id
    (40) expression -> . string
    (41) array_access -> . expression TkOBracket expression TkCBracket
    (42) array_modify -> . expression TkOpenPar expression TkTwoPoints expression TkClosePar
    (56) number -> . TkNum
    (57) boolean -> . TkTrue
    (58) boolean -> . TkFalse
    (55) id -> . TkId
    (59) string -> . TkString

    TkMinus         shift and go to state 31
    TkNot           shift and go to state 32
    TkOpenPar       shift and go to state 33
    TkNum           shift and go to state 40
    TkTrue          shift and go to state 41
    TkFalse         shift and go to state 42
    TkId            shift and go to state 21
    TkString        shift and go to state 43

    concatenation                  shift and go to state 29
    expression                     shift and go to state 30
    array_access                   shift and go to state 34
    array_modify                   shift and go to state 35
    number                         shift and go to state 36
    boolean                        shift and go to state 37
    id                             shift and go to state 38
    string                         shift and go to state 39

state 18

    (46) conditional -> TkIf . guards TkFi
    (47) guards -> . guards TkGuard guard
    (48) guards -> . guard
    (49) guard -> . expression TkArrow instructions
    (20) expression -> . expression TkPlus expression
    (21) expression -> . expression TkMinus expression
    (22) expression -> . expression TkMult expression
    (23) expression -> . expression TkOr expression
    (24) expression -> . expression TkAnd expression
    (25) expression -> . expression TkLess expression
    (26) expression -> . expression TkLeq expression
    (27) expression -> . expression TkGeq expression
    (28) expression -> . expression TkGreater expression
    (29) expression -> . expression TkEqual expression
    (30) expression -> . expression TkNEqual expression
    (31) expression -> . expression TkComma expression
    (32) expression -> . TkMinus expression
    (33) expression -> . TkNot expression
    (34) expression -> . TkOpenPar expression TkClosePar
    (35) expression -> . array_access
    (36) expression -> . array_modify
    (37) expression -> . number
    (38) expression -> . boolean
    (39) expression -> . id
    (40) expression -> . string
    (41) array_access -> . expression TkOBracket expression TkCBracket
    (42) array_modify -> . expression TkOpenPar expression TkTwoPoints expression TkClosePar
    (56) number -> . TkNum
    (57) boolean -> . TkTrue
    (58) boolean -> . TkFalse
    (55) id -> . TkId
    (59) string -> . TkString

    TkMinus         shift and go to state 31
    TkNot           shift and go to state 32
    TkOpenPar       shift and go to state 33
    TkNum           shift and go to state 40
    TkTrue          shift and go to state 41
    TkFalse         shift and go to state 42
    TkId            shift and go to state 21
    TkString        shift and go to state 43

    guards                         shift and go to state 44
    guard                          shift and go to state 45
    expression                     shift and go to state 46
    array_access                   shift and go to state 34
    array_modify                   shift and go to state 35
    number                         shift and go to state 36
    boolean                        shift and go to state 37
    id                             shift and go to state 38
    string                         shift and go to state 39

state 19

    (50) for -> TkFor . id TkIn expression TkTo expression TkArrow instructions TkRof
    (55) id -> . TkId

    TkId            shift and go to state 21

    id                             shift and go to state 47

state 20

    (51) do -> TkDo . guards TkOd
    (47) guards -> . guards TkGuard guard
    (48) guards -> . guard
    (49) guard -> . expression TkArrow instructions
    (20) expression -> . expression TkPlus expression
    (21) expression -> . expression TkMinus expression
    (22) expression -> . expression TkMult expression
    (23) expression -> . expression TkOr expression
    (24) expression -> . expression TkAnd expression
    (25) expression -> . expression TkLess expression
    (26) expression -> . expression TkLeq expression
    (27) expression -> . expression TkGeq expression
    (28) expression -> . expression TkGreater expression
    (29) expression -> . expression TkEqual expression
    (30) expression -> . expression TkNEqual expression
    (31) expression -> . expression TkComma expression
    (32) expression -> . TkMinus expression
    (33) expression -> . TkNot expression
    (34) expression -> . TkOpenPar expression TkClosePar
    (35) expression -> . array_access
    (36) expression -> . array_modify
    (37) expression -> . number
    (38) expression -> . boolean
    (39) expression -> . id
    (40) expression -> . string
    (41) array_access -> . expression TkOBracket expression TkCBracket
    (42) array_modify -> . expression TkOpenPar expression TkTwoPoints expression TkClosePar
    (56) number -> . TkNum
    (57) boolean -> . TkTrue
    (58) boolean -> . TkFalse
    (55) id -> . TkId
    (59) string -> . TkString

    TkMinus         shift and go to state 31
    TkNot           shift and go to state 32
    TkOpenPar       shift and go to state 33
    TkNum           shift and go to state 40
    TkTrue          shift and go to state 41
    TkFalse         shift and go to state 42
    TkId            shift and go to state 21
    TkString        shift and go to state 43

    guards                         shift and go to state 48
    guard                          shift and go to state 45
    expression                     shift and go to state 46
    array_access                   shift and go to state 34
    array_modify                   shift and go to state 35
    number                         shift and go to state 36
    boolean                        shift and go to state 37
    id                             shift and go to state 38
    string                         shift and go to state 39

state 21

    (55) id -> TkId .

    TkAsig          reduce using rule 55 (id -> TkId .)
    TkComma         reduce using rule 55 (id -> TkId .)
    TkTwoPoints     reduce using rule 55 (id -> TkId .)
    TkPlus          reduce using rule 55 (id -> TkId .)
    TkMinus         reduce using rule 55 (id -> TkId .)
    TkMult          reduce using rule 55 (id -> TkId .)
    TkOr            reduce using rule 55 (id -> TkId .)
    TkAnd           reduce using rule 55 (id -> TkId .)
    TkLess          reduce using rule 55 (id -> TkId .)
    TkLeq           reduce using rule 55 (id -> TkId .)
    TkGeq           reduce using rule 55 (id -> TkId .)
    TkGreater       reduce using rule 55 (id -> TkId .)
    TkEqual         reduce using rule 55 (id -> TkId .)
    TkNEqual        reduce using rule 55 (id -> TkId .)
    TkOBracket      reduce using rule 55 (id -> TkId .)
    TkOpenPar       reduce using rule 55 (id -> TkId .)
    TkConcat        reduce using rule 55 (id -> TkId .)
    TkCBlock        reduce using rule 55 (id -> TkId .)
    TkSemicolon     reduce using rule 55 (id -> TkId .)
    TkFi            reduce using rule 55 (id -> TkId .)
    TkGuard         reduce using rule 55 (id -> TkId .)
    TkOd            reduce using rule 55 (id -> TkId .)
    TkRof           reduce using rule 55 (id -> TkId .)
    TkArrow         reduce using rule 55 (id -> TkId .)
    TkIn            reduce using rule 55 (id -> TkId .)
    TkClosePar      reduce using rule 55 (id -> TkId .)
    TkCBracket      reduce using rule 55 (id -> TkId .)
    TkTo            reduce using rule 55 (id -> TkId .)


state 22

    (3) declarations -> TkDeclare seq_declarations .
    (5) seq_declarations -> seq_declarations . TkSemicolon declaration

    TkSkip          reduce using rule 3 (declarations -> TkDeclare seq_declarations .)
    TkPrint         reduce using rule 3 (declarations -> TkDeclare seq_declarations .)
    TkIf            reduce using rule 3 (declarations -> TkDeclare seq_declarations .)
    TkFor           reduce using rule 3 (declarations -> TkDeclare seq_declarations .)
    TkDo            reduce using rule 3 (declarations -> TkDeclare seq_declarations .)
    TkOBlock        reduce using rule 3 (declarations -> TkDeclare seq_declarations .)
    TkId            reduce using rule 3 (declarations -> TkDeclare seq_declarations .)
    TkSemicolon     shift and go to state 49


state 23

    (6) seq_declarations -> declaration .

    TkSemicolon     reduce using rule 6 (seq_declarations -> declaration .)
    TkSkip          reduce using rule 6 (seq_declarations -> declaration .)
    TkPrint         reduce using rule 6 (seq_declarations -> declaration .)
    TkIf            reduce using rule 6 (seq_declarations -> declaration .)
    TkFor           reduce using rule 6 (seq_declarations -> declaration .)
    TkDo            reduce using rule 6 (seq_declarations -> declaration .)
    TkOBlock        reduce using rule 6 (seq_declarations -> declaration .)
    TkId            reduce using rule 6 (seq_declarations -> declaration .)


state 24

    (7) declaration -> idLists . TkTwoPoints type

    TkTwoPoints     shift and go to state 50


state 25

    (8) idLists -> id . TkComma idLists
    (9) idLists -> id .

    TkComma         shift and go to state 51
    TkTwoPoints     reduce using rule 9 (idLists -> id .)


state 26

    (2) block -> TkOBlock declarations instructions TkCBlock .

    $end            reduce using rule 2 (block -> TkOBlock declarations instructions TkCBlock .)
    TkCBlock        reduce using rule 2 (block -> TkOBlock declarations instructions TkCBlock .)
    TkSemicolon     reduce using rule 2 (block -> TkOBlock declarations instructions TkCBlock .)
    TkFi            reduce using rule 2 (block -> TkOBlock declarations instructions TkCBlock .)
    TkGuard         reduce using rule 2 (block -> TkOBlock declarations instructions TkCBlock .)
    TkOd            reduce using rule 2 (block -> TkOBlock declarations instructions TkCBlock .)
    TkRof           reduce using rule 2 (block -> TkOBlock declarations instructions TkCBlock .)


state 27

    (10) instructions -> instructions TkSemicolon . instruction
    (12) instruction -> . TkSkip
    (13) instruction -> . assignment
    (14) instruction -> . print_instruction
    (15) instruction -> . conditional
    (16) instruction -> . for
    (17) instruction -> . do
    (18) instruction -> . block
    (19) assignment -> . id TkAsig expression
    (43) print_instruction -> . TkPrint concatenation
    (46) conditional -> . TkIf guards TkFi
    (50) for -> . TkFor id TkIn expression TkTo expression TkArrow instructions TkRof
    (51) do -> . TkDo guards TkOd
    (2) block -> . TkOBlock declarations instructions TkCBlock
    (55) id -> . TkId

    TkSkip          shift and go to state 9
    TkPrint         shift and go to state 17
    TkIf            shift and go to state 18
    TkFor           shift and go to state 19
    TkDo            shift and go to state 20
    TkOBlock        shift and go to state 3
    TkId            shift and go to state 21

    instruction                    shift and go to state 52
    assignment                     shift and go to state 10
    print_instruction              shift and go to state 11
    conditional                    shift and go to state 12
    for                            shift and go to state 13
    do                             shift and go to state 14
    block                          shift and go to state 15
    id                             shift and go to state 16

state 28

    (19) assignment -> id TkAsig . expression
    (20) expression -> . expression TkPlus expression
    (21) expression -> . expression TkMinus expression
    (22) expression -> . expression TkMult expression
    (23) expression -> . expression TkOr expression
    (24) expression -> . expression TkAnd expression
    (25) expression -> . expression TkLess expression
    (26) expression -> . expression TkLeq expression
    (27) expression -> . expression TkGeq expression
    (28) expression -> . expression TkGreater expression
    (29) expression -> . expression TkEqual expression
    (30) expression -> . expression TkNEqual expression
    (31) expression -> . expression TkComma expression
    (32) expression -> . TkMinus expression
    (33) expression -> . TkNot expression
    (34) expression -> . TkOpenPar expression TkClosePar
    (35) expression -> . array_access
    (36) expression -> . array_modify
    (37) expression -> . number
    (38) expression -> . boolean
    (39) expression -> . id
    (40) expression -> . string
    (41) array_access -> . expression TkOBracket expression TkCBracket
    (42) array_modify -> . expression TkOpenPar expression TkTwoPoints expression TkClosePar
    (56) number -> . TkNum
    (57) boolean -> . TkTrue
    (58) boolean -> . TkFalse
    (55) id -> . TkId
    (59) string -> . TkString

    TkMinus         shift and go to state 31
    TkNot           shift and go to state 32
    TkOpenPar       shift and go to state 33
    TkNum           shift and go to state 40
    TkTrue          shift and go to state 41
    TkFalse         shift and go to state 42
    TkId            shift and go to state 21
    TkString        shift and go to state 43

    id                             shift and go to state 38
    expression                     shift and go to state 53
    array_access                   shift and go to state 34
    array_modify                   shift and go to state 35
    number                         shift and go to state 36
    boolean                        shift and go to state 37
    string                         shift and go to state 39

state 29

    (43) print_instruction -> TkPrint concatenation .
    (44) concatenation -> concatenation . TkConcat expression

    TkCBlock        reduce using rule 43 (print_instruction -> TkPrint concatenation .)
    TkSemicolon     reduce using rule 43 (print_instruction -> TkPrint concatenation .)
    TkFi            reduce using rule 43 (print_instruction -> TkPrint concatenation .)
    TkGuard         reduce using rule 43 (print_instruction -> TkPrint concatenation .)
    TkOd            reduce using rule 43 (print_instruction -> TkPrint concatenation .)
    TkRof           reduce using rule 43 (print_instruction -> TkPrint concatenation .)
    TkConcat        shift and go to state 54


state 30
